feat: 폴더조회api 삭제 (#185)
