# src/swagger/swagger.yml
@@ -2505,90 +2505,6 @@ paths:
                   code: 500
                   errorCode: "INTERNAL_SERVER_ERROR"
                   reason: "서버 내부 오류가 발생했습니다."
-                  data: null 
-
-  # 폴더 목록 조회 API
-    get:
-      tags:
-        - Folder
-      summary: 폴더 목록 조회
-      description: 사용자의 폴더 목록을 조회합니다.
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: 조회 성공
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  resultType:
-                    type: string
-                    example: "SUCCESS"
-                  message:
-                    type: string
-                    example: "폴더 목록 조회 성공"
-                  data:
-                    type: object
-                    properties:
-                      folders:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            folderId:
-                              type: integer
-                              example: 101
-                            userId:
-                              type: integer
-                              example: 1
-                            folderTitle:
-                              type: string
-                              example: "프로그래밍"
-                            color:
-                              type: string
-                              example: "#000000"
-        '400':
-          description: |
-            - BAD_REQUEST: 토큰이 형식에 맞지 않음.      
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  resultType: "FAIL"
-                  code: 400
-                  errorCode: "BAD_REQUEST"
-                  reason: "인증 토큰이 형식에 맞지 않습니다."
-                  data: null
-        '401':
-          description: |
-            - TOKEN_NOT_FOUND: 인증 토큰이 없음.
-            - TOKEN_INVALID: 토큰이 유효하지 않음.
-            - TOKEN_EXPIRED: 토큰이 만료됨.            
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  resultType: "FAIL"
-                  code: 401
-                  errorCode: "TOKEN_NOT_FOUND | TOKEN_INVALID | TOKEN_EXPIRED"
-                  reason: "인증 토큰이 없습니다. | 토큰이 유효하지 않습니다. | 토큰이 만료되었습니다."
-                  data: null   
-        '500':
-          description: |
-            - INTERNAL_SERVER_ERROR: 서버 내부 오류 발생.
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  resultType: "FAIL"
-                  code: 500
-                  errorCode: "INTERNAL_SERVER_ERROR"
-                  reason: "서버 내부 오류가 발생했습니다."
                   data: null                                                                         
 
   # 폴더 수정 API
